--- a/package.json
+++ b/package.json
@@ -4,8 +4,33 @@
   "description": "Build basic structure to api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run serve",
+    "serve": "node server.js",
+    "build": "npm run build-ts && npm run tslint && npm run build-static ",
+    "build-local": "npm run build-ts && npm run tslint && npm run build-static",
+    "build-static": "ts-node copyStaticAssets.ts",
+    "build-ts": "tsc",
+    "tslint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "test": "cross-env NODE_ENV=test jest --verbose --coverage",
+    "watch-test": "npm run test -- --watchAll",
+    "watch-node": "nodemon dist/server.js",
+    "dev": "npm run build-static && npm run tslint && concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold,yellow.bold,red.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "watch-ts": "tsc -w"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "shelljs": "^0.8.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.7",
+    "@types/shelljs": "^0.8.8",
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.7"
+  }
 }
