--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "shelljs": "^0.8.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
+    "@types/morgan": "^1.9.1",
     "@types/shelljs": "^0.8.8",
     "concurrently": "^5.2.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
