--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.25",
     "shelljs": "^0.8.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
+    "@types/mongoose": "^5.7.32",
     "@types/morgan": "^1.9.1",
     "@types/shelljs": "^0.8.8",
     "concurrently": "^5.2.0",
